--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "husky": "^7.0.0"
   },
   "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2"
   }
 }
