--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,11 +16,15 @@
     "react": "^18.0.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.0.0",
+    "react-dotenv": "^0.1.3",
     "react-router-dom": "^6.4.2",
+    "react-scripts": "^5.0.1",
+    "react-spotify-web-playback": "^0.10.0",
     "template-fullstack": "file:.."
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
+    "dotenv-webpack": "^8.0.1",
     "eslint": "^8.26.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
@@ -32,6 +36,7 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "husky": "^7.0.0",
     "prettier": "^2.5.1",
+    "react-error-overlay": "^6.0.9",
     "vite": "^2.8.0"
   }
 }
