--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "setup": "npm i && husky install && npm --prefix ./frontend i && npm --prefix ./backend i",
     "migrate": "cd backend/ && node migrate.js && cd ..",
     "dev": "concurrently -n front,back -c green,yellow -t \"HH:mm:ss\" -p \"{name} {time}\" \"npm --prefix ./frontend run dev\" \"npm --prefix ./backend run dev\"",
-    "dev-front": "npm --prefix ./frontend run dev",
+    "dev-front": "npm --prefix ./frontend run dev && react-dotenv",
     "dev-back": "npm --prefix ./backend run dev",
     "lint": "npm --prefix ./frontend run lint && npm --prefix ./backend run lint",
     "fix": "npm --prefix ./frontend run fix && npm --prefix ./backend run fix"
@@ -21,8 +21,11 @@
   },
   "dependencies": {
     "axios": "^1.1.3",
+    "dotenv": "^16.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.2"
+    "react-dotenv": "^0.1.3",
+    "react-router-dom": "^6.4.2",
+    "react-scripts": "^5.0.1"
   }
 }
