--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,6 @@
   },
   "dependencies": {
     "axios": "^1.1.3",
-    "bootstrap": "^5.2.2",
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
     "react-bootstrap": "^2.5.0",
@@ -21,7 +20,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
-    "eslint": "^8.26.0",
+    "eslint": "^8.27.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-custom-alias": "^1.3.0",
@@ -32,6 +31,7 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "husky": "^7.0.0",
     "prettier": "^2.5.1",
+    "react-dotenv": "^0.1.3",
     "vite": "^2.8.0"
   }
 }
