--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
   "author": "Wild Code School",
   "license": "ISC",
   "devDependencies": {
-    "concurrently": "^7.0.0",
-    "husky": "^7.0.0"
+    "concurrently": "^7.5.0",
+    "dotenv": "^16.0.3",
+    "husky": "^7.0.4"
   },
   "dependencies": {
+    "eslint": "^8.27.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.4.3",
