--- a/frontend/.env.sample
+++ b/frontend/.env.sample
@@ -1,2 +1,6 @@
 # call it in React with import.meta.env.VITE_BACKEND_URL
-VITE_BACKEND_URL=http://localhost:5000
+VITE_BASE_URL=URL
+VITE_BACKEND_URL=BACKEND
+VITE_CLIENT_ID=CREATE
+VITE_CLIENT_SECRET=CREATE
+VITE_TOKEN_ENDPOINT=HTTPS
