--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react": "^18.0.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.0.0",
+    "react-dotenv": "^0.1.3",
     "react-router-dom": "^6.4.2",
     "template-fullstack": "file:.."
   },
