--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Wild Code School",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^18.11.9",
     "concurrently": "^7.5.0",
     "dotenv": "^16.0.3",
     "husky": "^7.0.4"
