--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.0.0",
     "react-dotenv": "^0.1.3",
+    "react-player": "^2.11.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "^5.0.1",
     "react-spotify-web-playback": "^0.10.0",
