--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@types/node": "^18.11.9",
     "concurrently": "^7.5.0",
     "dotenv": "^16.0.3",
-    "husky": "^7.0.4"
+    "husky": "^7.0.4",
+    "react-howler": "^5.2.0"
   },
   "dependencies": {
     "axios": "^1.1.3",
