--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,7 @@
     "husky": "^7.0.0",
     "prettier": "^2.5.1",
     "react-error-overlay": "^6.0.9",
+    "tailwindcss": "^3.2.7",
     "vite": "^2.8.0"
   }
 }
