--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js",
+    "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
     "migrate": "node migrate.js",
     "start": "node index.js",
     "lint": "echo '----- Checking Backend...' && npx prettier --debug-check . && eslint --ext .js . && echo '----- Done!'",
@@ -14,10 +14,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "argon2": "^0.30.3",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
+    "jsonwebtoken": "^9.0.0",
+    "jwt-decode": "^3.1.2",
     "mysql2": "^2.3.3",
+    "nodemailer": "^6.9.1",
     "template-fullstack": "file:.."
   },
   "rules": {
@@ -32,12 +36,21 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^8.11.0",
+    "@types/cors": "^2.8.13",
+    "@types/eslint": "^8.21.2",
+    "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.1",
+    "@types/node": "^18.15.3",
+    "@types/nodemailer": "^6.4.7",
+    "@types/prettier": "^2.7.2",
+    "eslint": "^8.36.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-prettier": "^4.0.0",
     "nodemon": "^2.0.15",
-    "prettier": "2.5.1"
+    "prettier": "^2.5.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.0.2"
   }
 }
