--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,10 @@
     "fix": "prettier --write . && eslint --fix --ext .jsx ."
   },
   "dependencies": {
+    "axios": "^1.3.4",
+    "dompurify": "^3.0.1",
     "howler": "^2.2.3",
+    "jwt-decode": "^3.1.2",
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
     "react-bootstrap": "^2.5.0",
