--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.3",
+    "nth-check": "^2.1.1",
     "prettier": "^2.8.5",
     "react-error-overlay": "^6.0.11",
     "vite": "^4.2.0"
