--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,9 @@
     "fix": "prettier --write . && eslint --fix --ext .jsx ."
   },
   "dependencies": {
+    "autoprefixer": "^10.4.14",
     "howler": "^2.2.3",
+    "postcss": "^8.4.21",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
@@ -21,6 +23,7 @@
     "react-router-dom": "^6.9.0",
     "react-scripts": "^5.0.1",
     "react-spotify-web-playback": "^0.13.3",
+    "tailwindcss": "^3.2.7",
     "template-fullstack": "file:..",
     "use-sound": "^4.0.1"
   },
@@ -36,7 +39,6 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.3",
-    "nth-check": "^2.1.1",
     "prettier": "^2.8.5",
     "react-error-overlay": "^6.0.11",
     "vite": "^4.2.0"
